Fixing z-index for buttons

--- a/css/style.css
+++ b/css/style.css
@@ -730,7 +730,6 @@
 				background: #F5F5F5;;
 				box-shadow: 2px 0px 15px rgba(37, 37, 37, 0.9);
 				font-weight: bolder;
-				z-index: 500;
 				width: 100%;
 			}
 
